...
    BisqScaffold(topBar = topBar) { paddingValues ->
        when {
            uiState.isLoading -> LoadingState(paddingValues)

            uiState.isLoadFailed ->
                ErrorState(
                    message = "mobile.settings.ignoredUsers.loadFailed".i18n(),
                    paddingValues = paddingValues,
                    onRetry = { onAction(IgnoredUsersUiAction.OnRetryLoadClick) },
                )

            uiState.ignoredUsers.isEmpty() ->
                Box(
...
            )
        }

        BisqGap.H1()

        BisqButton(
            text = "mobile.settings.ignoredUsers.unblock".i18n(),
            type = BisqButtonType.GreyOutline,
            onClick = onUnblock,
        )
    }
}

...
