...
                BisqButton(
                    text = confirmButtonText,
                    onClick = onConfirm,
                    fullWidth = true,
                    isLoading = confirmButtonLoading,
                    disabled = dismissButtonLoading,
                    modifier = Modifier.semantics { contentDescription = "dialog_confirm_yes" },
                )
            }
            if (confirmButtonText.isNotBlank() && dismissButtonText.isNotBlank()) {
                BisqGap.VHalf()
            }
            if (dismissButtonText.isNotBlank()) {
...
