...

    if (uiState.showConnectionFailedWarning) {
        ConfirmationDialog(
            headlineColor = BisqTheme.colors.danger,
            headline = "mobile.trustedNodeSetup.status.failed".i18n(),
            message = "mobile.trustedNodeSetup.connectionFailed.message".i18n(),
            confirmButtonText = "mobile.action.retry".i18n(),
            dismissButtonText = "mobile.trustedNodeSetup.pairWithNewNode".i18n(),
            confirmButtonLoading = !isConnectionFailedRetryEnabled,
            dismissButtonLoading = !isConnectionFailedRetryEnabled,
            onConfirm = { onAction(TrustedNodeSetupUiAction.OnConnectionFailedRetryPress) },
            onDismiss = { onAction(TrustedNodeSetupUiAction.OnConnectionFailedPairWithNewNodePress) },
            dismissOnClickOutside = false,
...
